@@ -49,6 +49,8 @@ debian-installer (2011xxxx) UNRELEASED; urgency=low
   * Add gzio to GRUB_MODULES on kfreebsd, since the kernel is compressed.
     Closes: #618320
   * Add mipsel/loongson-2f images.
+  * When building for a subarchitecture, don't include udebs for other
+    subarchitectures in standard-udebs.
 
   [ Joey Hess ]
   * Work around binutils breakage (#623710) that broke mklibs,
